@@ -24,6 +24,7 @@ type Monitor struct {
 	process            string
 	monitoringEndpoint string
 	loggingPath        string
+	loggingFile        string
 
 	monitorLogs    bool
 	monitorMetrics bool
@@ -31,13 +32,15 @@ type Monitor struct {
 
 // NewMonitor creates a beats monitor.
 func NewMonitor(process, pipelineID string, downloadConfig *artifact.Config, monitorLogs, monitorMetrics bool) *Monitor {
-	var monitoringEndpoint, loggingPath string
+	var monitoringEndpoint, loggingPath, loggingFile string
 
 	if monitorMetrics {
 		monitoringEndpoint = getMonitoringEndpoint(process, downloadConfig.OS(), pipelineID)
 	}
 	if monitorLogs {
-		loggingPath = getLoggingFileDirectory(downloadConfig.InstallPath, downloadConfig.OS(), pipelineID)
+		operatingSystem := downloadConfig.OS()
+		loggingFile = getLoggingFile(process, operatingSystem, downloadConfig.InstallPath, pipelineID)
+		loggingPath = filepath.Dir(loggingFile)
 	}
 
 	return &Monitor{
@@ -45,6 +48,7 @@ func NewMonitor(process, pipelineID string, downloadConfig *artifact.Config, mon
 		process:            process,
 		monitoringEndpoint: monitoringEndpoint,
 		loggingPath:        loggingPath,
+		loggingFile:        loggingFile,
 		monitorLogs:        monitorLogs,
 		monitorMetrics:     monitorMetrics,
 	}
@@ -125,7 +129,7 @@ func (b *Monitor) LogPath() string {
 		return ""
 	}
 
-	return b.loggingPath
+	return b.loggingFile
 }
 
 // MetricsPath describes a location where application exposes metrics
